# 6818_media

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Readme.txt  main.cpp  media
camera_6124/: camera_6124.cpp  camera_6124.h
camera_uvc/: camera_uvc.cpp  camera_uvc.h
codec/vpu/: Util.h  VpuDecTest.cpp
doc/: CMake简明使用.md  github分支.md  s5p6818编解码功能开发笔记.md  常见YUV格式.md  音频采集.md
example/: vi_ffmpeg_opencv.cpp  vi_framebuffer.cpp  vi_uvc.cpp
ffmpeg/interface/: ffmpeg_sws.cpp  ffmpeg_sws.h
ffmpeg/lib/: libavdevice.so.57.0.101  libavutil.so.55.17.103  libpostproc.so.54.0.100  libswresample.so.2.0.101  libswscale.so.4.0.100
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffprobe-all.1  ffprobe.1  ffserver-all.1  ffserver.1
framebuffer/: framebuffer.cpp  framebuffer.h
opencv/include/opencv2/: opencv.hpp  opencv_modules.hpp
opencv/lib/: libopencv_calib3d.so.3.4.5  libopencv_core.so.2.4.9  libopencv_core.so.3.4.5  libopencv_features2d.so.2.4.9  libopencv_features2d.so.3.4.5  libopencv_flann.so.2.4.9  libopencv_flann.so.3.4.5  libopencv_highgui.so.2.4.9  libopencv_highgui.so.3.4.5  libopencv_imgcodecs.so.3.4.5  libopencv_imgproc.so.2.4.9  libopencv_imgproc.so.3.4.5  libopencv_ml.so.2.4.9  libopencv_ml.so.3.4.5  libopencv_objdetect.so.3.4.5  libopencv_photo.so.2.4.9  libopencv_photo.so.3.4.5  libopencv_shape.so.3.4.5  libopencv_stitching.so.3.4.5  libopencv_superres.so.3.4.5  libopencv_video.so.2.4.9  libopencv_video.so.3.4.5  libopencv_videoio.so.3.4.5  libopencv_videostab.so.3.4.5
opencv/lib/pkgconfig/: opencv.pc
opencv/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
source/3rd_interface/ffmpeg/: ffmpeg_sws.cpp  ffmpeg_sws.h
source/3rd_interface/opencv/: opencv_mat.cpp
source/audio/: audio.cpp  audio.h  audio_wave.cpp  audio_wave.h
source/camera/: camera.h
source/camera/camera_6124/: camera_6124.h
source/camera/camera_gc2053/: camera_gc2053.cpp  camera_gc2053.h
source/camera/camera_uvc/: camera_uvc.cpp  camera_uvc.h
source/codec/encode/: encode.h
source/codec/encode/encode_6818/: encode_6818.cpp  encode_6818.h
source/codec/vpu/: .depend  CodecInfo.cpp  Makefile  MediaExtractor.cpp  MediaExtractor.h  NX_AndroidRenderer.cpp  VpuDecTest.cpp  VpuEncTest.cpp  VpuJpgTest.cpp  codec_tests  main.bk  main.cpp  vpu.cpp  vpu.h
source/example/: amg8833.cpp  audio_process.cpp  audio_read_play.cpp  audio_record_write.cpp  audio_test.cpp  vi_framebuffer.cpp  vi_multichannel.cpp  vi_signalchannel.cpp  vi_uvc_framebuffer.cpp  vpss_encode.cpp
source/framebuffer/: framebuffer.cpp  framebuffer.h
